[gd_scene load_steps=10 format=2]

[ext_resource path="res://art/szornyek/pangulin.png" type="Texture" id=1]
[ext_resource path="res://monsters/pangulin.gd" type="Script" id=5]
[ext_resource path="res://monsters/attack.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.73673
height = 29.7045

[sub_resource type="CapsuleShape2D" id=2]
radius = 25.2984
height = 34.6219

[sub_resource type="CircleShape2D" id=3]
radius = 22.6556

[sub_resource type="CircleShape2D" id=4]
radius = 39.6585

[sub_resource type="Animation" id=5]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("shadow/test/ColorRect/attack/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("shadow/test/pangulin:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("shadow/test/ColorRect/attack/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("shadow/test/pangulin:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="pangulin" type="KinematicBody2D"]
z_index = 5
collision_layer = 9
collision_mask = 9
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.199682, 15.7312 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="shadow" type="Sprite" parent="."]
position = Vector2( -1.84565, -1.61738 )

[node name="test" type="Sprite" parent="shadow"]
position = Vector2( 0.199021, -2.77638 )
z_index = 5
hframes = 4

[node name="pangulin" type="Sprite" parent="shadow/test"]
position = Vector2( 1.86516, 4.09554 )
texture = ExtResource( 1 )
offset = Vector2( -1.26494, -5.80662 )
hframes = 4

[node name="ColorRect" type="ColorRect" parent="shadow/test"]
margin_left = -32.861
margin_top = -28.889
margin_right = 5.13903
margin_bottom = -27.889
color = Color( 0.988235, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hitbox" type="Area2D" parent="shadow/test/ColorRect" groups=[
"enemyhitbox",
"hurtbox",
]]
collision_layer = 40
collision_mask = 40

[node name="CollisionShape2D" type="CollisionShape2D" parent="shadow/test/ColorRect/hitbox"]
position = Vector2( 35.4644, 29.8776 )
rotation = 1.57079
shape = SubResource( 2 )

[node name="attack" type="Area2D" parent="shadow/test/ColorRect" groups=[
"damagebox",
]]
visible = false
collision_layer = 16
collision_mask = 2147483664
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="shadow/test/ColorRect/attack"]
position = Vector2( 34.5355, 33.6562 )
rotation = -0.0493968
shape = SubResource( 3 )
disabled = true

[node name="sense" type="Area2D" parent="shadow/test/ColorRect"]
visible = false
collision_layer = 6
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="shadow/test/ColorRect/sense"]
position = Vector2( 34.8806, 33.5353 )
shape = SubResource( 4 )

[node name="astimer" type="Timer" parent="shadow/test/ColorRect"]

[node name="fleetimer" type="Timer" parent="shadow/test/ColorRect"]

[node name="ColorRect2" type="ColorRect" parent="shadow/test"]
visible = false
margin_left = -11.2136
margin_top = -40.2784
margin_right = -10.2136
margin_bottom = 3.72163
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 5 )
anims/idle = SubResource( 6 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -16.9782
margin_top = -49.9053
margin_right = -8.9782
margin_bottom = -35.9053
rect_scale = Vector2( 0.5, 0.5 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="shadow/test/ColorRect/hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="shadow/test/ColorRect/attack" to="." method="_on_attack_area_entered"]
[connection signal="area_exited" from="shadow/test/ColorRect/attack" to="." method="_on_attack_area_exited"]
[connection signal="body_entered" from="shadow/test/ColorRect/sense" to="." method="_on_sense_body_entered"]
[connection signal="body_exited" from="shadow/test/ColorRect/sense" to="." method="_on_sense_body_exited"]
[connection signal="timeout" from="shadow/test/ColorRect/astimer" to="." method="_on_astimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
